# medical_exam_prep_app

./: .gitignore  README.md  app.py  main.py  migrate_data.py  pyproject.toml  test_migration.py  test_user_data_management.py
.streamlit/: config.toml
docs/: 01_システム概要.md  02_データベース仕様書.md  03_API仕様書.md  04_セキュリティ仕様書.md  05_デプロイメントガイド.md  06_ユーザーガイド.md  07_開発者ガイド.md  08_新しいデータベース設計ガイド.md  09_カテゴリー別管理設計ガイド.md  10_スキーマ移行ガイド.md  11_移行プロンプト.md  12_新規チャット移行プロンプト.md  13_匿名ユーザー問題解決ガイド.md  14_新DB対応修正ガイド.md  RELEASE_NOTES.md  create_new_category_based_schema_fixed.sql  database_indexes_and_constraints.md  database_refactoring_plan.md  implementation_status.md  migration_guide.md  migration_strategy.md  pages_modules_refactoring_plan.md  rls_policy_fixes_v2.sql  setup_rls_policies.sql  supabase_action_summary.md  supabase_auth_extension.sql  supabase_migration_guide.md  supabase_schema_fixed.sql  supabase_schema_setup.sql  supabase_update_practice_types.sql  supabase_user_management_schema.sql  technical_specifications.md  todo_detailed.md  user_management_setup_guide.md
modules/: database.py  database_adapter.py  database_adapter_v3.py  database_v2.py  database_v3.py  essay_scorer.py  interview_prepper.py  medical_knowledge_checker.py  paper_finder.py  scorer.py  session_manager.py  user_auth.py  utils.py
pages/: 01_県総_採用試験.py  02_小論文.py  03_面接.py  04_自由記述.py  05_自由記述.py  05_英語読解.py  06_学習履歴.py  07_ユーザー管理.py  1_採用試験.py  4_学習履歴.py  99_Supabase診断.py
tests/: README.md  __init__.py  run_all_tests.py  simple_test.py  test_database_adapter.py  test_imports.py  test_paper_finder.py  test_purpose_distinction.py  test_v2_free_writing.py
